# DesktopCharacter

./: CMakeLists.txt  README.md
include/: Random.hpp  STRING.hpp  argparse.hpp  charaimg.hpp  charamgr.hpp  charasnd.hpp  image.hpp  msg.hpp  options.hpp  recvmsg.hpp  sound.hpp
src/: CMakeLists.txt  dtpchara.cpp
src/chara/: CMakeLists.txt  charamgr.cpp
src/chara/argparse/: CMakeLists.txt  argparse.cpp
src/chara/charaimg/: CMakeLists.txt  charaimg.cpp  image.cpp
src/chara/charasnd/: CMakeLists.txt  charasnd.cpp  sound.cpp
src/recvmsg/: CMakeLists.txt  recvmsg.cpp
src/sendmsg/: CMakeLists.txt  sendmsg.cpp
